# xtr-warp-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  pyproject.toml  rustfmt.toml
.github/workflows/: build-and-release.yml  ci.yml  publish-2100.yml  publish-2110.yml  publish-270.yml  publish-280.yml  publish-290.yml  release-wheels.yml  test-release.yml
benchmark/: README.md  benchmark.py  run_benchmark.py
python/search/: __init__.py  search.py
python/xtr_warp/: __init__.py  device_planner.py  embedding_source.py  filtering.py  hyperparams.py  index_maintenance.py  kmeans.py  search.py
rust/: lib.rs
rust/index/: compact.rs  create.rs  delete.rs  encode.rs  ivf.rs  mod.rs  source.rs  update.rs
rust/search/: candidate_assembly.rs  centroid_selector.rs  decompressor.rs  gpu_merge_kernel.cpp  index_handle.rs  loader.rs  merger.rs  mod.rs  scorer.rs  sharded_scorer.rs  streaming.rs
rust/utils/: cuda_stream.rs  mod.rs  residual_codec.rs  types.rs
scripts/: release_prep.py
shim/: cuda_stream_shim.cpp
tests/: test.py  test_filtering.py  test_index_management.py  test_sharding.py
