[package]
name = "xtr_warp_rs"
version = "1.1.2"
edition = "2021"
build = "build.rs"

[lib]
name = "xtr_warp_rs"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
anyhow = "1.0.102"
tch = { version = "0.20.0" }
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
libc = "0.2.184"
indicatif = "0.18.4"
pyo3 = { version = "0.24.2", features = ["extension-module"] }
pyo3-tch = "0.20.0"
rand = "0.9.1"
chrono = "0.4"
memmap2 = "0.9.10"
rayon = "1.11.0"

# Test dependencies
[dev-dependencies]
tempfile = "3.27.0"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "errhandlingapi"] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[build-dependencies]
cc = "1.0"

[dependencies.torch-sys]
version = "0.20.0"
